Updated Polycraft Jar with print of portalRestURL